# og-article

./: .readthedocs.yml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg
.github/workflows/: main.yml
docs/: conf.py  index.rst
src/atsphinx/: og_article.py
src/atsphinx/og_article/: __init__.py  models.py  processors.py
tests/: test_it.py  test_tags.py  test_times.py
tests/test-root/: case-times-complete.rst  conf.py  index.rst
tests/test-root/cases-for-tags/: multiple.rst  no-data.rst  single.rst
tests/test-root/cases-for-times/: local-local.rst  local-none.rst  local-tzinfo.rst  none-local.rst  none-tzinfo.rst  tzinfo-local.rst  tzinfo-none.rst  tzinfo-tzinfo.rst
